Fix for mobile safari media queries on iOS7

--- a/static/css/feedthing.css
+++ b/static/css/feedthing.css
@@ -63,6 +63,11 @@ a {
 	padding-top: 40px;
 }
 
+@viewport{
+    zoom: 1.0;
+    width: device-width;
+}
+
 @media only screen and (max-width: 600px)
 {
   /* phone */
